# Wallpaper

./: README.md  meson.build
src/wallpaper/: Wallpaper.css  Wallpaper.vala  izle.py  meson.build
src/wallpaper/modules/: controls.vala  image.vala  lyrics.vala  weather.vala  whoami.vala
src/wallpaper/things/: Things.vala  Values.vala
